# datamover

./: .coverage  .gitignore  HOWTO.md  PAUL.md  README.md  bitmover.py  config.ini  create_bundle.sh  create_wheels.sh  pyproject.toml
ai-playbooks/: 01-requirements-definition.md  02-code-and-test-generation.md  03-complexity-management.md  04-architecture-and-project-context.md  README.md
design/: design-v0.1.md  example  old_script.py
design/scripts/: INSTALL.md  config.ini.template  configure_instance_exportcliv2.sh  install-app.conf  install_base_exportcliv2.sh
design/systemd/: files_needed
design/systemd/bitmover/: bitmover.service
design/systemd_units/: exportcliv2@.service.template
exportcliv2-deploy/: deploy-all.sh  install-app.conf  install_base_exportcliv2.sh
exportcliv2-deploy/config_files/: common.auth.conf
exportcliv2-deploy/systemd_units/: bitmover.service.template
installer/: QUICK_START_GUIDE.md  USER_GUIDE.md  deploy-all.sh  deploy-orchestrator.sh  install_patch.sh  overview-plantuml.txt
installer/exportcliv2-deploy/: configure_instance.sh  datamover-0.1.0-py3-none-any.whl  deploy_orchestrator.sh  install-app.conf  install_base_exportcliv2.sh  manage_services.sh  test_plan.md  uninstall.sh
installer/exportcliv2-deploy/config_files/: app.conf.template  common.auth.conf  config.ini.template  run_exportcliv2_instance.sh.template
installer/exportcliv2-deploy/systemd_units/: bitmover.service.template  exportcliv2-healthcheck@.service.template  exportcliv2-healthcheck@.timer.template  exportcliv2-restart@.path.template  exportcliv2-restart@.service.template  exportcliv2@.service.template
requirements/: scanner.md  stuck_files.md  stuck_files_test_plan.md
src/datamover/: __init__.py  app.py  bitmover.py  data_rx.py  make_pcaps.py  protocols.py
src/datamover/file_functions/: create_directories.py  determin_destination.py  directory_validation.py  discover_files.py  execute_move_file.py  file_exceptions.py  find_available_target_path.py  fs_mock.py  gather_entry_data.py  get_devices.py  get_effective_disk_capacity.py  move_file_safely.py  safe_delete.py  safe_stat.py  scan_directory_and_filter.py  validate_file.py
src/datamover/mover/: mover_thread.py  thread_factory.py
src/datamover/purger/: manage_disk_space.py  process_files_for_deletion.py  purger_thread.py  scan_and_sort_files.py  select_files_to_delete.py  thread_factory.py
src/datamover/queues/: queue_functions.py
src/datamover/scanner/: do_single_cycle.py  file_state_record.py  process_scan_results.py  (+5 more)
tests/: conftest.py
tests/blackbox/: conftest.py  helpers.py  test_app_end_to_end_flow.py  test_app_scanner_lost_files.py  test_app_scanner_stuck_files.py  test_app_uploader_resilience.py
tests/integration/: test_file_mover_integration.py  test_manage_disk_space.py  test_scanner_integration.py  test_tail_integration.py  test_upload_integration.py  test_xxx.py
tests/test_utils/: fs_helpers.py  logging_helpers.py
(+69 files in other folders)
