[project]
name = "datamover"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jathorp", email = "jat1963@icloud.com" }
]
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.3",
    "watchdog>=6.0.0",
]

[project.scripts]
datamover = "datamover:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-httpserver>=1.1.3",
    "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
markers = [
    "blackbox: marks tests as black-box end-to-end tests",
    "integration: marks tests as integration tests"
]
