[project]
name = "datamover"
version = "0.1.0"
description = "Bitmover application to monitor CSV hash files and upload PCAP files to a remote NiFi server"
readme = "README.md"
authors = [
    { name = "jathorp", email = "jat1963@icloud.com" }
]

requires-python = ">=3.10" # Changed to 3.10 based on discussion, please confirm

dependencies = [
    "requests>=2.32.3",
    "watchdog>=6.0.0",
]

[project.scripts]
bitmover = "datamover.bitmover:main" # Script name is 'bitmover'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-httpserver>=1.1.3",
    "pytest-mock>=3.14.0",
    "types-requests>=2.32.0.20250515",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
markers = [
    "blackbox: marks tests as black-box end-to-end tests",
    "integration: marks tests as integration tests"
]

[tool.mypy]
mypy_path = "src"
