[project]
name = "datamover"
version = "0.1.3"
description = "Bitmover application to monitor CSV hash files and upload PCAP files to a remote NiFi server"
readme = "README.md"
authors = [
    { name = "jathorp", email = "jat1963@icloud.com" }
]

requires-python = "~=3.9.0"

dependencies = [
    "requests>=2.32.3",
    "watchdog>=6.0.0",
]

[project.scripts]
bitmover = "datamover.bitmover:main" # Script name is 'bitmover'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pip>=25.1.1",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-mypy-plugins>=3.2.0",
    "pytest-cov>=6.1.1",
    "pytest-httpserver>=1.1.3",
    "pytest-mock>=3.14.0",
    "types-requests>=2.32",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
markers = [
    "blackbox: marks tests as black-box end-to-end tests",
    "integration: marks tests as integration tests"
]

[tool.mypy]
mypy_path = "src"
plugins = ["pytest_mypy_plugins.main"]
